--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,15 +46,16 @@ footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -69,22 +70,22 @@ section {
 /* Hero Style Start */
 .hero {
     background-image: url("../images/hero-bg.jpeg");
-    height: 600px;
     background-size: cover;
     Background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .hero-form {
     background-color: #fce138;
-    width: 500px;
     padding: 20px;
     color: #024e76;
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
-    position: absolute;
     bottom: 120px;
-    right: 140px;
+    width: 40%;
+    margin: 3.5%;
 }
 .hero-form h3 {
     font-size: 24px;
@@ -111,6 +112,19 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+}
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    magin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color:#fce138;
 }
 /* Hero Styles End */
 
