added rounded elements and psuedo classes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,20 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url(../images/hero-bg.jpeg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 header a {
     text-decoration: none;
@@ -34,6 +42,13 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 
 * {
@@ -71,14 +86,15 @@ section {
 .hero {
     background-image: url("../images/hero-bg.jpeg");
     background-size: cover;
-    Background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items:flex-start;
 }
 .hero-form {
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, 0.8);
     padding: 20px;
     color: #024e76;
     border-style: solid;
@@ -87,6 +103,8 @@ section {
     bottom: 120px;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 15px;
 }
 .hero-form h3 {
     font-size: 24px;
@@ -103,6 +121,12 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.75);
+}
+.form-input:focus {
+    background-color: rgba(255,255,255,1);
+    outline: none;
 }
 .hero-form label {
     margin: 0 5px;
@@ -113,6 +137,10 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+}
+.hero-form button:hover {
+    background-color: #fce138;
 }
 .hero-cta {
     width: 35%;
@@ -121,6 +149,7 @@ section {
     color: #fff;
     font-size: 18px;
     line-height: 1.2;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 .hero-cta h2 {
     font-style: italic;
@@ -197,6 +226,9 @@ section {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+.step:last-child {
+    border-bottom: none;
 }
 
 /* Trainers Section Styles */
@@ -279,6 +311,12 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.75);
+}
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255,1);
+    outline: none;
 }
 .contact-info a {
     color: #fce138;
@@ -291,6 +329,11 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+}
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
 }
 
 .flex-row {
@@ -302,6 +345,7 @@ section {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
     header h1 {
         width: 100%;
